# vck190-base-trd

./: .gitmodules  Jenkinsfile  Makefile  README.md  index.html  trd-pl-cfg
.petalinux/: metadata
2020.2/doctrees/: build-filter2d.doctree  build-overview.doctree  build-pfm.doctree  build-plnx.doctree  build-vivado.doctree  environment.pickle  index.doctree  intro.doctree  known-issues.doctree  revision.doctree  run.doctree  support.doctree
2020.2/html/: build-filter2d.html  build-overview.html  build-pfm.html  build-plnx.html  build-vivado.html  genindex.html  index.html  intro.html  known-issues.html  revision.html  run.html  search.html  searchindex.js  support.html
2021.1/doctrees/: arch.doctree  build-filter2d.doctree  build-overview.doctree  build-pfm.doctree  build-plnx.doctree  build_img.doctree  environment.pickle  filter2d_arch.doctree  hwarch.doctree  index.doctree  intro.doctree  known-issues.doctree  revision.doctree  run.doctree  support.doctree  swarch.doctree
docs/: README.md  amd-theme-README.md  index.html
overlays/filter2d/apps/filter2d-notebooks/filter2d-notebooks/vvas-accel-sw-libs/: CMakeLists.txt
overlays/filter2d/apps/filter2d-notebooks/filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_pl/: CMakeLists.txt
overlays/filter2d/apps/filter2d-notebooks/filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_pl/json_files/: kernel_xfilter2d_pl.json
overlays/filter2d/apps/filter2d-notebooks/filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_pl/src/: vvas_xfilter2d.h  vvas_xfilter2d_pl.c
overlays/filter2d/apps/filter2d-notebooks/filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_sw/: CMakeLists.txt
overlays/filter2d/apps/filter2d-notebooks/filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_sw/json_files/: kernel_xfilter2d_sw.json
overlays/filter2d/apps/filter2d-notebooks/filter2d-notebooks/vvas-accel-sw-libs/vvas_xfilter2d_sw/src/: vvas_xfilter2d.h  vvas_xfilter2d_sw.cpp
project-spec/: attributes
(+524 files in other folders)
